--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ash Turner</title>
-    <link rel="stylesheet" href="styles/index.css" />
 
     <!-- For IE 9 and below -->
     <!--[if IE
@@ -32,6 +31,18 @@
 
     <!-- Firefox, Chrome, Safari, IE 11+ and Opera -->
     <link rel="icon" type="image/png" href="images/favicon-196.png" />
+
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      rel="preload"
+      as="style"
+      href="https://fonts.googleapis.com/css2?family=Anonymous+Pro:wght@400;700&family=Prosto+One&display=swap"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Anonymous+Pro:wght@400;700&family=Prosto+One&display=swap"
+    />
+    <link rel="stylesheet" href="styles/index.css" />
   </head>
   <body>
     <div class="container">
