--- a/wander.html
+++ b/wander.html
@@ -4,8 +4,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Wander - Ash Turner</title>
-    <link rel="stylesheet" href="styles/index.css" />
-    <link rel="stylesheet" href="styles/project.css" />
 
     <!-- For IE 9 and below -->
     <!--[if IE
@@ -21,6 +19,19 @@
 
     <!-- Firefox, Chrome, Safari, IE 11+ and Opera -->
     <link rel="icon" type="image/png" href="images/favicon-196.png" />
+
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      rel="preload"
+      as="style"
+      href="https://fonts.googleapis.com/css2?family=Anonymous+Pro:wght@400;700&family=Prosto+One&display=swap"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Anonymous+Pro:wght@400;700&family=Prosto+One&display=swap"
+    />
+    <link rel="stylesheet" href="styles/index.css" />
+    <link rel="stylesheet" href="styles/project.css" />
   </head>
   <body>
     <div id="main-page">
